--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ raur = "3.0.1"
 raur-ext = "2.0.0"
 aur-fetch = "0.7.0"
 pacmanconf = "0.1.1"
-alpm = "0.10.1"
+alpm = "0.10.2"
 alpm-utils = "0.3.1"
 srcinfo = "1.0.0"
 aur-depends = "0.5.2"
@@ -28,7 +28,7 @@ smart-default = "0.6.0"
 reqwest = "0.10.8"
 libflate = "1.0.2"
 serde = { version = "1.0.116", features = ["derive"] }
-serde_json = "1.0.58"
+serde_json = "1.0.59"
 futures = "0.3.6"
 rss = "1.9.0"
 htmlescape = "0.3.1"
@@ -37,7 +37,7 @@ nix = "0.18.0"
 once_cell = "1.4.1"
 
 [build-dependencies]
-alpm = "0.10.1"
+alpm = "0.10.2"
 
 [profile.release]
 lto = true
@@ -45,3 +45,4 @@ lto = true
 [features]
 git = ["alpm/git", "alpm-utils/git", "aur-depends/git"]
 backtrace = []
+generate = ["alpm/generate"]
