--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Morgan <morganamilo@archlinux.org>
 pkgname=yay.rs-git
 _pkgname=yay.rs
-pkgver=0.0.1.r3.4a1f723
+pkgver=0.0.1.r8.78e5f2f
 pkgrel=1
 pkgdesc='Rust port of yay'
 url='https://github.com/morganamilo/yay.rs'
-source=("git+https://github.com/morganamilo/yay.rs")
+source=("git+https://github.com/morganamilo/yay.rs#branch=dev")
 arch=('x86_64' 'i686')
 license=('GPL3')
 
@@ -21,7 +21,7 @@ build () {
   cd "$srcdir/$_pkgname"
 
   if pacman -T pacman-git > /dev/null; then
-    _features+="git,"
+    _features+="git,generate,"
   fi
 
   if [[ $(rustc -V) == *"nightly"* ]]; then
