--- a/paru.conf
+++ b/paru.conf
@@ -1,13 +1,13 @@
 #
-# /etc/yay.conf
+# /etc/paru.conf
 #
-# See the yay.conf(5) manpage for option and repository directives
+# See the paru.conf(5) manpage for option and repository directives
 
 #
 # GENERAL OPTIONS
 #
 [options]
-#BuildDir = $HOME/.cache/yay
+#BuildDir = $HOME/.cache/paru
 #AURURL = https://aur.archlinux.org
 
 #BottomUp
