--- a/paru.conf
+++ b/paru.conf
@@ -1,40 +1,25 @@
 #
 # /etc/paru.conf
+# ~/.config/paru/paru.conf
 #
-# See the paru.conf(5) manpage for option and repository directives
+# See the paru.conf(5) manpage for options
 
 #
 # GENERAL OPTIONS
 #
 [options]
-#BuildDir = $HOME/.cache/paru
-#AURURL = https://aur.archlinux.org
-
-#BottomUp
-#CompletionInterval = 7
-#SortBy = votes
-#RemoveMake
-#Redownload
-#Rebuild
-
-PGPFetch
+PgpFetch
 Devel
 Provides
+#BottomUp
+#RemoveMake
 #SudoLoop
-#TimeUpdate
-#Us?eAsk
+#UseAsk
 #CombinedUpgrade
 #CleanAfter
 
+#
+# Binary OPTIONS
+#
 #[bin]
-#Makepkg = makepkg
-#Pacman = pacman
-#Tar = bsdtar
-#Gpg  = gpg
-#Git = git
 #FileManager = vifm
-
-#Editor = vim
-#EditorFlags =
-
-#PacmanConf = /etc/pacman.conf
