--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Morgan <morganamilo@archlinux.org>
 pkgname=paru-git
 _pkgname=paru
-pkgver=0.0.1.r33.440545c
+pkgver=0.0.1.r42.6b5167e
 pkgrel=1
 pkgdesc='AUR helper based on yay'
 url='https://github.com/morganamilo/paru'
-source=("git+https://github.com/morganamilo/paru")
+source=("git+https://github.com/morganamilo/paru#branch=dev")
 arch=('x86_64' 'i686')
 license=('GPL3')
 
