Fixed URL encoding issues in getpkgbuilds option

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ term_size = "0.3.2"
 anyhow = "1.0.33"
 dirs = "3.0.1"
 url = "2.1.1"
+urlencoding = "1.1.1"
 smart-default = "0.6.0"
 reqwest = "0.10.8"
 libflate = "1.0.2"
