--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ libflate = "1.0.2"
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.59"
 futures = "0.3.6"
-rss = "1.9.0"
+rss = { version = "1.9.0", default-features = false}
 htmlescape = "0.3.1"
 indicatif = "0.15.0"
 nix = "0.18.0"
