--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,7 @@ anyhow = "1.0.33"
 dirs = "3.0.1"
 url = "2.1.1"
 smart-default = "0.6.0"
-reqwest = "0.10.8"
-libflate = "1.0.2"
+reqwest = {version = "0.10.8", features = ["gzip"]}
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.59"
 futures = "0.3.6"
