--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ raur = "3.0.1"
 raur-ext = "2.0.0"
 aur-fetch = "0.7.1"
 pacmanconf = "0.1.1"
-alpm = "0.10.2"
-alpm-utils = "0.3.1"
+alpm = "1.0.0-rc1"
+alpm-utils = "0.5.0"
 srcinfo = "1.0.0"
-aur-depends = "0.7.0"
+aur-depends = "0.8.0"
 
 tokio = { version = "0.2.22", features = ["process", "macros"] }
 ansi_term = "0.12.1"
@@ -43,7 +43,7 @@ nix = "0.18.0"
 once_cell = "1.4.1"
 
 [build-dependencies]
-alpm = "0.10.2"
+alpm = "1.0.0-rc1"
 
 [profile.release]
 lto = true
