--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ htmlescape = "0.3.1"
 indicatif = "0.15.0"
 nix = "0.19.0"
 once_cell = "1.4.1"
+percent-encoding = "2.1.0"
 
 [build-dependencies]
 alpm = "1.0.0-rc1"
