--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,11 @@ srcinfo = "1.0.0"
 
 
 ansi_term = "0.12.1"
-anyhow = "1.0.33"
 atty = "0.2.14"
 chrono = "0.4.19"
+color-eyre = "0.5.6"
 dirs = "3.0.1"
+eyre = "0.6.2"
 futures = "0.3.7"
 htmlescape = "0.3.1"
 indicatif = "0.15.0"
