--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ indicatif = "0.15.0"
 nix = "0.19.0"
 once_cell = "1.4.1"
 percent-encoding = "2.1.0"
-reqwest = { version = "0.10.8", features = ["gzip"] }
+reqwest = { version = "0.10.8", default-features = false, features = ["gzip", "rustls-tls"] }
 rss = { version = "1.9.0", default-features = false }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
