--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ smart-default = "0.6.0"
 term_size = "0.3.2"
 tokio = { version = "0.2.22", features = ["process", "macros"] }
 url = "2.1.1"
+kuchiki = "0.8.1"
 
 [profile.release]
 lto = true
