--- a/paru.conf
+++ b/paru.conf
@@ -20,6 +20,7 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always
 #CombinedUpgrade
 #CleanAfter
 #UpgradeMenu
+#NewsOnUpgrade
 
 #
 # Binary OPTIONS
