--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ rss = { version = "1.9.0", default-features = false }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 smart-default = "0.6.0"
+tempfile = "3.1.0"
 term_size = "0.3.2"
 tokio = { version = "0.2.22", features = ["process", "macros"] }
 url = "2.2.0"
