--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,14 +34,14 @@ htmlescape = "0.3.1"
 indicatif = "0.15.0"
 nix = "0.19.0"
 once_cell = "1.5.2"
-reqwest = { version = "0.10.9", features = ["gzip"] }
+reqwest = { version = "0.11.0", features = ["gzip"] }
 rss = { version = "1.9.0", default-features = false }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 smart-default = "0.6.0"
 tempfile = "3.1.0"
 term_size = "0.3.2"
-tokio = { version = "0.2.22", features = ["process", "macros"] }
+tokio = { version = "1.0.1", features = ["process", "macros", "rt-multi-thread"] }
 url = "2.2.0"
 kuchiki = "0.8.1"
 
