Add movepkgs to config

--- a/paru.conf
+++ b/paru.conf
@@ -21,8 +21,10 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always
 #CleanAfter
 #UpgradeMenu
 #NewsOnUpgrade
+
 #LocalRepo
 #Chroot
+#MovePkgs
 
 #
 # Binary OPTIONS
