--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,10 @@ atty = "0.2.14"
 chrono = "0.4.19"
 dirs = "3.0.1"
 futures = "0.3.8"
+globset = "0.4.6"
 htmlescape = "0.3.1"
 indicatif = "0.15.0"
+kuchiki = "0.8.1"
 nix = "0.19.0"
 once_cell = "1.5.2"
 reqwest = { version = "0.11.0", features = ["gzip"] }
@@ -43,7 +45,6 @@ tempfile = "3.1.0"
 term_size = "0.3.2"
 tokio = { version = "1.0.1", features = ["process", "macros", "rt-multi-thread"] }
 url = "2.2.0"
-kuchiki = "0.8.1"
 
 [profile.release]
 lto = true
