--- a/.github/workflows/paru.yml
+++ b/.github/workflows/paru.yml
@@ -14,7 +14,7 @@ jobs:
       image: archlinux
     steps:
       - name: Install Packages
-        run: pacman -Syu rust clang gcc libarchive pkgconf sudo --noconfirm --needed
+        run: pacman -Syu rust clang gcc libarchive pkgconf sudo fakeroot --noconfirm --needed
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,7 +23,7 @@ jobs:
         run: cargo fmt -- --check
 
       - name: Test
-        run: sudo -u nobody BUILDDIR=/tmp PKGDEST=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked  --features generate,mock --target-dir=/tmp -- --test-threads=1
+        run: sudo -u nobody BUILDDIR=/tmp PKGDEST=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features generate,mock --target-dir=/tmp -- --test-threads=1
 
   test-git:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
       image: archlinux
     steps:
       - name: Install Packages
-        run: pacman -Syu rust curl clang git base-devel libarchive meson asciidoc doxygen fakechroot pkgconf  --noconfirm  --needed
+        run: pacman -Syu rust curl clang git base-devel libarchive meson asciidoc doxygen fakechroot pkgconf --noconfirm --needed
 
       - name: Install Pacman-git
         run: |
@@ -49,4 +49,4 @@ jobs:
         run: cargo fmt -- --check
 
       - name: Test
-        run: sudo -u nobody BUILDDIR=/tmp PKGDEST=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked  --features git,generate,mock --target-dir=/tmp -- --test-threads=1
+        run: sudo -u nobody BUILDDIR=/tmp PKGDEST=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features git,generate,mock --target-dir=/tmp -- --test-threads=1
