Seperate build step in CI

--- a/.github/workflows/paru.yml
+++ b/.github/workflows/paru.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Format
         run: cargo fmt -- --check
 
+      - name: Build
+        run: cargo build --locked --features generate
+
       - name: Test
         run: sudo -u nobody BUILDDIR=/tmp PKGDEST=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features generate,mock --target-dir=/tmp -- --test-threads=1
 
@@ -47,6 +50,9 @@ jobs:
 
       - name: Format
         run: cargo fmt -- --check
+
+      - name: Build
+        run: cargo build --locked --features git,generate
 
       - name: Test
         run: sudo -u nobody BUILDDIR=/tmp PKGDEST=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features git,generate,mock --target-dir=/tmp -- --test-threads=1
