--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build Release
 on:
   push:
     tags:
-      - v*
+      - v[0-9]+.[0-9]+.[0-9]+
 
 jobs:
   build-releases:
@@ -59,6 +59,8 @@ jobs:
     needs: [build-releases]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Read info
         id: tags
         shell: bash
@@ -70,6 +72,10 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: paru-aarch64
+      - name: Generate release changelog
+        run: |
+          sed -ne '/${{ steps.tags.outputs.tag }}/,/^## /{/^## /d;p}' CHANGELOG.md |
+            sed -e '1d;$d' > CHANGELOG-${{ steps.tags.outputs.tag }}.md
       - name: Create Release
         id: create_release
         uses: actions/create-release@master
@@ -79,6 +85,7 @@ jobs:
           tag_name: ${{ steps.tags.outputs.tag }}
           release_name: ${{ steps.tags.outputs.tag }}
           draft: true
+          body_path: CHANGELOG-${{ steps.tags.outputs.tag }}.md
           prerelease: false
       - name: Upload x86_64 asset
         id: upload-release-asset-x86_64
