Fix -Si alignment with wide unicode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ env_logger = "0.8.4"
 log = "0.4.14"
 async-trait = { version = "0.1.50", optional = true }
 tr = "0.1.6"
+unicode-width = "0.1.8"
 
 [profile.release]
 codegen-units = 1
