--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
 
 
 [dependencies]
-alpm = "2.0.5"
-alpm-utils = "1.0.0"
+alpm = "2.1.0"
+alpm-utils = "1.1.0"
 aur-depends = "1.0.0"
 aur-fetch = "0.9.1"
 cini = "0.1.1"
@@ -42,7 +42,7 @@ serde_json = "1.0.64"
 smart-default = "0.6.0"
 tempfile = "3.2.0"
 term_size = "0.3.2"
-tokio = { version = "1.7.1", features = ["process", "macros", "rt-multi-thread"] }
+tokio = { version = "1.8.0", features = ["process", "macros", "rt-multi-thread"] }
 url = "2.2.2"
 env_logger = "0.8.4"
 log = "0.4.14"
@@ -58,4 +58,5 @@ lto = true
 git = ["alpm/git", "alpm-utils/git", "aur-depends/git"]
 backtrace = []
 generate = ["alpm/generate"]
+static = ["alpm/static"]
 mock = ["async-trait"]
