--- a/paru.conf
+++ b/paru.conf
@@ -18,6 +18,7 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always
 #RemoveMake
 #SudoLoop
 #UseAsk
+#SaveChanges
 #CombinedUpgrade
 #CleanAfter
 #UpgradeMenu
