Add -x/--regex for -Ss
Allows search the aur using regex

paru -Ssx ^p.ru

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ log = "0.4.14"
 async-trait = { version = "0.1.51", optional = true }
 tr = "0.1.6"
 unicode-width = "0.1.9"
+regex = "1.5.4"
 
 [profile.release]
 codegen-units = 1
