--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ htmlescape = "0.3.1"
 indicatif = "0.16.2"
 kuchiki = "0.8.1"
 nix = "0.22.1"
-reqwest = { version = "0.11.4", features = ["gzip"] }
+reqwest = { version = "0.11.4", features = ["gzip", "socks"] }
 rss = { version = "1.10.0", default-features = false }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
