Add -hg to default DevelSuffixes

--- a/paru.conf
+++ b/paru.conf
@@ -12,7 +12,7 @@
 PgpFetch
 Devel
 Provides
-DevelSuffixes = -git -cvs -svn -bzr -darcs -always
+DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg
 #AurOnly
 #BottomUp
 #RemoveMake
