--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
 
 
 [dependencies]
-alpm = "2.1.3"
+alpm = "2.2.1"
 alpm-utils = "1.1.2"
 aur-depends = "1.0.3"
 aur-fetch = "0.10.0"
@@ -62,3 +62,6 @@ backtrace = []
 generate = ["alpm/generate"]
 static = ["alpm/static"]
 mock = ["async-trait"]
+
+#[patch.crates-io]
+#alpm = { path = "../alpm.rs/alpm" }
