Renamed option to KeepRepoCache

--- a/paru.conf
+++ b/paru.conf
@@ -28,7 +28,7 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg
 #Chroot
 #Sign
 #SignDb
-#KeepOldPackages
+#KeepRepoCache
 
 #
 # Binary OPTIONS
