--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ htmlescape = "0.3.1"
 indicatif = "0.16.2"
 kuchiki = "0.8.1"
 nix = "0.23.1"
-reqwest = { version = "0.11.9", features = ["gzip", "socks"] }
+reqwest = { version = "0.11.9", features = ["brotli", "socks"] }
 rss = { version = "2.0.0", default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
