Add commented option for skipping review process

--- a/paru.conf
+++ b/paru.conf
@@ -23,6 +23,7 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg
 #CleanAfter
 #UpgradeMenu
 #NewsOnUpgrade
+#SkipReview=always
 
 #LocalRepo
 #Chroot
