--- a/paru.conf
+++ b/paru.conf
@@ -12,7 +12,7 @@
 PgpFetch
 Devel
 Provides
-DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg
+DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 #AurOnly
 #BottomUp
 #RemoveMake
