--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
 alpm = "2.2.1"
 alpm-utils = "2.0.0"
 aur-depends = "1.0.3"
-aur-fetch = "0.10.0"
+aur-fetch = "0.11.0"
 cini = "1.0.0"
 pacmanconf = "2.0.0"
 raur = "6.0.0"
@@ -66,5 +66,5 @@ mock = ["async-trait"]
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
 aur-depends = { path = "../aur-depends" }
-aur-fetch = { path = "../aur-fetch" }
+#aur-fetch = { path = "../aur-fetch" }
 
