Rework split package installing
Install split packages seperate instead of on their own. This fixes the
case of split packages where a later package has new dependencies.

Fixes #778

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,6 @@ mock = ["async-trait"]
 
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
-#aur-depends = { path = "../aur-depends" }
+aur-depends = { path = "../aur-depends" }
 #aur-fetch = { path = "../aur-fetch" }
 
