Deisable pacman sig checks
They're expired so breaking CI

--- a/testdata/pacman.conf
+++ b/testdata/pacman.conf
@@ -4,13 +4,13 @@ Architecture = auto
 NoProgressBar
 
 [core]
-SigLevel = PackageRequired
+SigLevel = Never
 Server=https://archive.archlinux.org/repos/2021/04/30/$repo/os/$arch
 
 [extra]
-SigLevel = PackageRequired
+SigLevel = Never
 Server=https://archive.archlinux.org/repos/2021/04/30/$repo/os/$arch
 
 [community]
-SigLevel = PackageRequired
+SigLevel = Never
 Server=https://archive.archlinux.org/repos/2021/04/30/$repo/os/$arch
