--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,6 @@ mock = ["async-trait"]
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
 #aur-depends = { path = "../aur-depends" }
-aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "29b5398" }
+aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "adae47" }
 #aur-fetch = { path = "../aur-fetch" }
 
