--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.82"
 smart-default = "0.6.0"
 tempfile = "3.3.0"
-term_size = "0.3.2"
+terminal_size = "0.2.1"
 tokio = { version = "1.19.2", features = ["process", "macros", "rt-multi-thread"] }
 url = "2.2.2"
 env_logger = "0.9.0"
