Add container feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ backtrace = []
 generate = ["alpm/generate"]
 static = ["alpm/static"]
 mock = ["async-trait"]
+container = []
 
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
