--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,9 @@ dirs = "4.0.0"
 futures = "0.3.21"
 globset = "0.4.9"
 htmlescape = "0.3.1"
-indicatif = "0.16.2"
+indicatif = "0.17.1"
 kuchiki = "0.8.1"
-nix = "0.24.1"
+nix = "0.25.0"
 reqwest = { version = "0.11.11", features = ["gzip", "socks"] }
 rss = { version = "2.0.1", default-features = false }
 serde = { version = "1.0.137", features = ["derive"] }
@@ -41,7 +41,11 @@ serde_json = "1.0.82"
 smart-default = "0.6.0"
 tempfile = "3.3.0"
 term_size = "0.3.2"
-tokio = { version = "1.19.2", features = ["process", "macros", "rt-multi-thread"] }
+tokio = { version = "1.19.2", features = [
+    "process",
+    "macros",
+    "rt-multi-thread",
+] }
 url = "2.2.2"
 env_logger = "0.9.0"
 log = "0.4.17"
@@ -68,4 +72,3 @@ mock = ["async-trait"]
 #aur-depends = { path = "../aur-depends" }
 aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "b1b6c0" }
 #aur-fetch = { path = "../aur-fetch" }
-
