--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ srcinfo = "1.0.0"
 
 ansi_term = "0.12.1"
 anyhow = "1.0.58"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 dirs = "4.0.0"
 futures = "0.3.21"
 globset = "0.4.9"
