--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ unicode-width = "0.1.9"
 regex = "1.5.6"
 signal-hook = "0.3.14"
 once_cell = "1.12.0"
+bitflags = "1.3.2"
 
 [profile.release]
 codegen-units = 1
