--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,6 @@ mock_chroot = ["mock"]
 
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
-#aur-depends = { path = "../aur-depends" }
-aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "4aeaf7" }
+aur-depends = { path = "../aur-depends" }
+#aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "4aeaf7" }
 #aur-fetch = { path = "../aur-fetch" }
