--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
 [dependencies]
 alpm = "2.2.1"
 alpm-utils = "2.0.0"
-aur-depends = "2.1.0"
+aur-depends = "3.0.0"
 aur-fetch = "0.11.2"
 cini = "1.0.0"
 pacmanconf = "2.0.0"
@@ -72,5 +72,5 @@ mock_chroot = ["mock"]
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
 #aur-depends = { path = "../aur-depends" }
-aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "258afa" }
+#aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "258afa" }
 #aur-fetch = { path = "../aur-fetch" }
