Implement pkgbuild devel upgrades
Fixes #975

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,5 +72,5 @@ mock_chroot = ["mock"]
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
 #aur-depends = { path = "../aur-depends" }
-#aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "258afa" }
+aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "c36167" }
 #aur-fetch = { path = "../aur-fetch" }
