--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ regex = "1.7.1"
 signal-hook = "0.3.14"
 once_cell = "1.17.0"
 bitflags = "1.3.2"
+toml = { version = "0.8.2", features = ["preserve_order"] }
 
 [profile.release]
 codegen-units = 1
