--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,115 +4,82 @@ on:
     tags:
       - v*
     branches:
-       - release/*
+       - test-release/*
 
 jobs:
+  get-version:
+    runs-on: ubuntu-latest
+    outputs: 
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - id: version
+        run: echo "version=${ref##test-release/}" >> $GITHUB_OUTPUT
+        env:
+          ref: ${{ github.ref_name }}
+
   build-releases:
+    name: Build release
+    runs-on: ubuntu-latest
+    needs: get-version
     strategy:
       matrix:
-        arch:
-          [
-            "linux/amd64 x86_64",
-            "linux/arm64/v8 aarch64",
-            "linux/arm/v7 armv7h"
-          ]
-    name: Build ${{ matrix.arch }}
-    runs-on: ubuntu-latest
+        platform:
+        - target: x86_64-unknown-linux-gnu
+          arch: x86_64
+
+        - target: aarch64-unknown-linux-gnu
+          arch: aarch64
+
+        - target: armv7-unknown-linux-gnueabihf
+          arch: armv7h
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
-          platforms: all
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          version: latest
-      - name: Read info
-        id: tags
-        shell: bash
-        run: |
-          arch="${{ matrix.arch }}"
-          echo ::set-output name=PLATFORM::${arch%% *}
-          echo ::set-output name=ARCH::${arch##* }
-      - name: Build ${{ matrix.arch }} release
-        shell: bash
-        run: |
-          arch="${{ matrix.arch }}"
-          PLATFORM=${arch%% *}
-          ARCH=${arch##* }
-          mkdir artifacts
-          docker buildx build --platform $PLATFORM \
-          --tag paru:$ARCH \
-          --load \
-          .
-          docker create --name paru-$ARCH paru:$ARCH
-          docker cp paru-$ARCH:/app/paru.tar.zst paru-$ARCH.tar.zst
-          docker container rm paru-$ARCH
-          mv paru-*.tar.zst artifacts
+          toolchain: stable
+          target: ${{ matrix.platform.target }}
+          override: true
+      - run: ./scripts/dist
       - uses: actions/upload-artifact@v2
         with:
-          name: paru-${{ steps.tags.outputs.arch }}
-          path: artifacts
+          name: paru-${{ needs.get-version.outputs.version }}-${{ matrix.platform.arch }}.tar.zst
+          path: paru-${{ matrix.platform.arch }}.tar.zst
 
-  create_release:
-    name: Create release from this build
-    needs: [build-releases]
+  release:
+    name: Create GitHub Release
     runs-on: ubuntu-latest
+    needs: [build-releases, get-version]
+    outputs:
+      release-url: ${{ steps.create-release.outputs.url }}
     steps:
-      - name: Read info
-        id: tags
-        shell: bash
-        run: |
-          echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
-      - uses: actions/download-artifact@v2
+    - name: Create Release
+      id: create-release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ needs.get-version.outputs.version }}
+        release_name: Paru v${{ needs.get-version.outputs.version }}
+        draft: true
+        prerelease: false
+
+  upload-binaries:
+    name: Upload binaries to Githib relase
+    runs-on: ubuntu-latest
+    needs: [release, get-version]
+    strategy:
+      matrix:
+          arch: [x86_64, aarch64, armv7h]
+    steps:
+      - uses: actions/download-artifact@v3
         with:
-          name: paru-x86_64
-      - uses: actions/download-artifact@v2
-        with:
-          name: paru-aarch64
-      - uses: actions/download-artifact@v2
-        with:
-          name: paru-armv7h
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@master
+          path: paru-${{ needs.get-version.outputs.version }}-${{ matrix.arch }}.tar.zstd
+      - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tags.outputs.tag }}
-          release_name: ${{ steps.tags.outputs.tag }}
-          draft: true
-          prerelease: false
-      - name: Upload x86_64 asset
-        id: upload-release-asset-x86_64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./paru-x86_64.tar.zst
-          asset_name: paru-${{ steps.tags.outputs.tag }}-x86_64.tar.zst
+          upload_url: ${{ needs.release.outputs.release-url }}
+          asset_path: paru-${{ needs.get-version.outputs.version }}-${{ matrix.arch }}.tar.ztd
           asset_content_type: application/tar+zstd
-      - name: Upload aarch64 asset
-        id: upload-release-asset-aarch64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./paru-aarch64.tar.zst
-          asset_name: paru-${{ steps.tags.outputs.tag }}-aarch64.tar.zst
-          asset_content_type: application/tar+zstd
-      - name: Upload armv7h asset
-        id: upload-release-asset-armv7h
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./paru-armv7h.tar.zst
-          asset_name: paru-${{ steps.tags.outputs.tag }}-armv7h.tar.zst
-          asset_content_type: application/tar+zstd
+
