--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ futures = "0.3.25"
 globset = "0.4.10"
 htmlescape = "0.3.1"
 indicatif = "0.17.3"
-kuchiki = "0.8.1"
+scraper = "0.17.1"
 nix = "0.26.2"
 reqwest = { version = "0.11.14", features = ["gzip", "socks"] }
 rss = { version = "2.0.2", default-features = false }
