--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,18 +27,18 @@ srcinfo = "1.1.0"
 ansi_term = "0.12.1"
 anyhow = "1.0.68"
 chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
-dirs = "4.0.0"
+dirs = "5.0.1"
 futures = "0.3.25"
 globset = "0.4.10"
 htmlescape = "0.3.1"
 indicatif = "0.17.3"
 scraper = "0.17.1"
-nix = "0.26.2"
+nix = { version = "0.27.1", features = ["fs", "user"] }
 reqwest = { version = "0.11.14", features = ["gzip", "socks"] }
 rss = { version = "2.0.2", default-features = false }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-smart-default = "0.6.0"
+smart-default = "0.7.1"
 tempfile = "3.3.0"
 term_size = "0.3.2"
 tokio = { version = "1.24.2", features = [
@@ -55,7 +55,7 @@ unicode-width = "0.1.10"
 regex = "1.7.1"
 signal-hook = "0.3.14"
 once_cell = "1.17.0"
-bitflags = "1.3.2"
+bitflags = "2.4.0"
 toml = { version = "0.8.2", features = ["preserve_order"] }
 
 [profile.release]
