--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 smart-default = "0.7.1"
 tempfile = "3.3.0"
-term_size = "0.3.2"
+terminal_size = "0.3.0"
 tokio = { version = "1.24.2", features = [
     "process",
     "macros",
