--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ mock_chroot = ["mock"]
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
 alpm = { git = "https://github.com/archlinux/alpm.rs", rev = "101b05" }
+alpm-utils = { git = "https://github.com/archlinux/alpm.rs", rev = "101b05" }
 #aur-depends = { path = "../aur-depends" }
 aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "c36167" }
 #aur-fetch = { path = "../aur-fetch" }
