--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ srcinfo = "1.1.0"
 
 
 ansi_term = "0.12.1"
-anyhow = "1.0.68"
+anyhow = { version = "1.0.68", features = ["backtrace"] }
 chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
 dirs = "5.0.1"
 futures = "0.3.25"
