--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,5 +76,5 @@ default = ["git", "generate"]
 alpm = { git = "https://github.com/archlinux/alpm.rs", rev = "101b05" }
 alpm-utils = { git = "https://github.com/archlinux/alpm.rs", rev = "101b05" }
 aur-depends = { path = "../aur-depends" }
-#aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "c36167" }
+#aur-depends = { git = "https://github.com/Morganamilo/aur-depends"}
 #aur-fetch = { path = "../aur-fetch" }
