--- a/testdata/git-repo/config
+++ b/testdata/git-repo/config
@@ -5,4 +5,4 @@
 	ignorecase = true
 	precomposeunicode = true
 [remote "origin"]
-	url = /Users/morganamilo/a
+	url = /Users/morganamilo/git/git-repo
