--- a/.github/workflows/paru.yml
+++ b/.github/workflows/paru.yml
@@ -36,7 +36,7 @@ jobs:
         run: cargo build --locked --features generate
 
       - name: Test
-        run: sudo -u nobody XDG_STATE_HOME=/tmp BUILDDIR=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features generate,mock --target-dir=/tmp -- --nocapture
+        run: sudo -u nobody XDG_STATE_HOME=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features generate,mock --target-dir=/tmp -- --nocapture
 
   test-git:
     runs-on: ubuntu-latest
@@ -65,4 +65,4 @@ jobs:
         run: cargo build --locked --features git,generate
 
       - name: Test
-        run: sudo -u nobody XDG_STATE_HOME=/tmp BUILDDIR=/tmp SRCDEST=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features git,generate,mock --target-dir=/tmp -- --nocapture
+        run: sudo -u nobody XDG_STATE_HOME=/tmp CARGO_HOME=/tmp/cargo cargo test --locked --features git,generate,mock --target-dir=/tmp -- --nocapture
