--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "paru"
-version = "2.0.0"
+version = "2.0.1"
 authors = ["morganamilo <morganamilo@archlinux.org>"]
 edition = "2021"
 
@@ -73,8 +73,8 @@ mock_chroot = ["mock"]
 
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
-alpm = { git = "https://github.com/archlinux/alpm.rs", rev = "144ced" }
-alpm-utils = { git = "https://github.com/archlinux/alpm.rs", rev = "144ced" }
+alpm = { git = "https://github.com/archlinux/alpm.rs", rev = "c11cab" }
+alpm-utils = { git = "https://github.com/archlinux/alpm.rs", rev = "c11cab" }
 #aur-depends = { path = "../aur-depends" }
 aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "9f09f5"}
 #aur-fetch = { path = "../aur-fetch" }
