Also cache git tests

--- a/.github/workflows/paru.yml
+++ b/.github/workflows/paru.yml
@@ -62,6 +62,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - uses: Swatinem/rust-cache@2
+        with:
+          cache-on-failure: true
+
       - name: Format
         run: cargo fmt -- --check
 
