--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,7 @@ mock_chroot = ["mock"]
 [patch.crates-io]
 #alpm = { path = "../alpm.rs/alpm" }
 #alpm-utils = { path = "../alpm.rs/alpm-utils" }
-#alpm = { git = "https://github.com/archlinux/alpm.rs", rev = "8da396" }
+alpm = { git = "https://github.com/archlinux/alpm.rs", rev = "306342" }
 #alpm-utils = { git = "https://github.com/archlinux/alpm.rs", rev = "8da396" }
 #aur-depends = { path = "../aur-depends" }
 aur-depends = { git = "https://github.com/Morganamilo/aur-depends", rev = "30c2c1"}
