--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ signal-hook = "0.3.17"
 once_cell = "1.20.2"
 bitflags = "2.6.0"
 toml = { version = "0.8.19", features = ["preserve_order"] }
+which = "7.0.0"
+shell-words = "1.1.0"
 
 [profile.release]
 codegen-units = 1
