--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ log = "0.4.22"
 async-trait = { version = "0.1.83", optional = true }
 tr = "0.1.10"
 unicode-width = "0.2.0"
-regex = "1.11.1"
+regex-lite = "0.1.6"
 signal-hook = "0.3.17"
 once_cell = "1.20.2"
 bitflags = "2.6.0"
